...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/title_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
...
            android:paddingRight="30dp"
            android:text="Title"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_activityTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:ems="10"
            android:gravity="right"
            android:inputType="text"
...
            android:layout_gravity="center|right|center_vertical"
            android:gravity="right|center_vertical"
            android:scrollbarSize="4dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/caloriesBurnt_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
...
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_LinearLayout"
        tools:layout_editor_absoluteX="0dp" >

        <TextView
            android:id="@+id/tv_caloriesBurnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left|center_vertical"
            android:paddingRight="30dp"
            android:text="Calories Burnt"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editNumber_caloriesBurnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_saveActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveActivity"
        android:text="Save Activity"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toStartOf="parent"
...
